# VoiceDev

./: .aider.conf.yml  .env.example  .gitignore  LICENSE  README.md  REPORT.md  config.example.yaml  diagnose.py  pyproject.toml  requirements.txt  test_voicedev.py
landing/: README.md  index.html  package-lock.json  package.json
landing/src/: App.jsx  styles.css
tests/: test_aider.py  test_commands.py  test_config.py  test_feedback.py  test_noise.py  test_smart_filter.py  test_stt_mock.py  test_vad.py  test_wakeword.py
voicedev/: __init__.py  config.py  main.py
voicedev/agent/: aider.py  base.py
voicedev/audio/: capture.py  feedback.py  noise.py  vad.py  wakeword.py
voicedev/commands/: router.py
voicedev/session/: logger.py
voicedev/stt/: base.py  faster_whisper.py  groq_whisper.py  whisper_api.py
voicedev/tui/: display.py
