[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voicedev"
version = "0.1.0"
description = "Voice-first interface for terminal-based AI coding agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "VoiceDev Contributors"}]
keywords = ["voice", "coding", "agent", "aider", "stt", "whisper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "sounddevice>=0.4.6",
    "webrtcvad-wheels>=2.0.14",
    "numpy>=1.24",
    "scipy>=1.10",
    "noisereduce>=3.0",
    "openai>=1.0",
    "faster-whisper>=0.10",
    "groq>=0.5.0",
    "rich>=13.0",
    "keyboard>=0.13",
    "rapidfuzz>=3.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.scripts]
voicedev = "voicedev.main:main"

[tool.setuptools.packages.find]
include = ["voicedev*"]
